Bug 131753 - Empty dialog/ menu's when rendering large gif and skia enabled
Summary: Empty dialog/ menu's when rendering large gif and skia enabled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-03-31 20:59 UTC by Telesto
Modified: 2020-04-08 10:01 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file (4.27 MB, application/vnd.oasis.opendocument.presentation)
2020-03-31 21:07 UTC, Telesto
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-03-31 20:59:23 UTC
Description:
Empty dialog/ menu's when rendering large gif and skia enabled

Steps to Reproduce:
1. Open the attached file
2. Click a menu item (tools) (or hoover over all the menus)
3. Make a change (move the gif) & press close (empty save dialog)

Actual Results:
Empty dialogs

Expected Results:
Painted dialogs


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.0.0.0.alpha0+ (x64)
Build ID: 4501a0ba623ad61c5a4e0b807da2e96f0e4ce82c
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win; 
Locale: nl-NL (nl_NL); UI-Language: en-US
Calc: CL
Comment 1 Telesto 2020-03-31 21:07:09 UTC
Created attachment 159200 [details]
Example file
Comment 2 Telesto 2020-03-31 21:08:37 UTC
BTW, the gif doesn't rendering in presentation mode at all (F5). Same root cause or different bug?
Comment 3 Timur 2020-04-01 14:42:37 UTC
Repro 7.0+ with Skia.
Comment 4 Commit Notification 2020-04-08 09:55:30 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b8aaac402dfe551fb63eabb06386a4631e28300a

run svx animations at POST_PAINT priority (tdf#131753)

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Luboš Luňák 2020-04-08 10:01:30 UTC
The animation now shouldn't block either the UI or the presentation => closing.