run svx animations at POST_PAINT priority (tdf#131753)

Skia VCL drawing (and GL too) set first drawing to POST_PAINT,
so that the contents aren't drawn prematurely the first time,
but only after the first paint has been finished. But animations
constantly running at a normal priority will starve that.
It doesn't make sense to run animations at REPAINT or higher
priorities anyway, if LO is busy painting then animating more
will just make it even busier.

Change-Id: I6ee3356c9ef9acb577f8d81976aa3df968ca2155